fix: overflow: overlay

--- a/app/root.css
+++ b/app/root.css
@@ -52,6 +52,7 @@ html {
 body {
 	background: var(--color-background);
 	font-family: "League Spartan", monospace;
+	overflow: overlay;
 }
 
 body,
